# openapi-httpx

./: .tool-versions  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: client.md  index.md  reference.md
openapi_httpx/: __init__.py  __main__.py  httpx_parser.py
tests/: generate_test.py  httpx_parser_test.py
tests/fixtures/: petstore.json
